<resources>
    <string name="app_name">交行助手</string>
    <string name="app_bottom_end">--我是有底线的--</string>
    
    <!--splash-->
    <string name="splash_title">交行问答</string>
    <string name="splash_descriptor">你身边权威全面的办事专家</string>

    <!--guide-->
    <string name="guide_pager1_title">权威的政务问答</string>
    <string name="guide_pager1_descriptor">为每一座城市量身打造属于自己的政务百科库</string>
    <string name="guide_pager2_title">问答更智能</string>
    <string name="guide_pager2_descriptor">为每一座城市量身打造属于自己的政务百科库</string>
    <string name="guide_skip">跳过</string>
    <string name="guide_enter">立即体验</string>

    <!--main-->

    <string name="main_on_back_press_title">再按一次退出程序</string>
    <string name="main_bottom_bar_service_title">问政指南</string>
    <string name="main_bottom_bar_my_title">我的</string>

    <!--bank-->
    <string name="bank_toolbar_title">主页</string>
    <string name="bank_hot_more">查看更多</string>

    <!--home-->
    <string name="home_toolbar_title">交行助手</string>
    <string name="home_header_title">人工智能小秘书</string>
    <string name="home_header_action_enter">和TA对话</string>

    <!--my-->
    <string name="my_toolbar_title">我的</string>
    <string name="my_func_collect">我的收藏</string>
    <string name="my_func_clear_cache">清空缓存</string>
    <string name="my_func_check_version">新版本检测</string>
    <string name="my_func_about_us">关于我们</string>
    <string name="my_func_edit_cypher">修改密码</string>
    <string name="my_func_exit_login">退出登录</string>
    <string name="my_func_login">登录</string>

    <!--user info-->
    <string name="user_info_photo">头像</string>
    <string name="user_info_nick_name">昵称</string>
    <string name="user_info_toolbar_title">个人信息</string>

    <!--login-->
    <string name="login_login_title">登录</string>
    <string name="login_app_title">城市问事厅</string>
    <string name="login_account_title">账号</string>
    <string name="login_cypher_title">密码</string>
    <string name="login_memory_account">记住账号</string>
    <string name="login_forget_cypher">忘记密码</string>
    <string name="login_no_account">还没有账号？</string>
    <string name="login_register_btn">立即注册</string>
    <string name="login_wrong_phone_format">输入的手机号格式不正确</string>
    <string name="login_wrong_password_format">密码至少为6位数字或者字母的组合</string>

    <!--robot-->
    <string name="robot_toolbar_title">交行小助手</string>
    <string name="robot_toolbar_title_connecting">连接中...</string>
    <string name="robot_toolbar_title_disconnect">未连接</string>
    <string name="robot_toolbar_title_connect_failed">连接失败</string>
    <string name="robot_message_recommend">您是不是想问下面的问题</string>
    <string name="robot_message_menu_welcome">欢迎您! \n您是不是想问如下问题</string>
    <string name="robot_route_way_multi_item">出发地：%1$s\n目的地：%2$s</string>
    <string name="robot_poi_multi_item">名称：%1$s\n地址：%2$s\n电话：%3$s</string>

    <!--detail-->
    <string name="detail_toolbar_title">详 情</string>

    <string name="robot_record_release_and_cancel">松开手指，取消发送</string>
    <string name="robot_record_release_to_cancel">松开 取消</string>
    <string name="robot_record_slide_up_and_cancel">手指上滑，取消发送</string>

    <string name="robot_audio_release_to_send">松开 结束</string>
    <string name="robot_audio_hold_to_talk">按住 说话</string>
    <string name="robot_text_press_to_send">发送</string>

    <string name="robot_plugin_item_album">相册</string>
    <string name="robot_plugin_item_camera">拍摄</string>

    <!--collect-->
    <string name="collect_toolbar_title">我的收藏</string>

    <!--question-->

    <string name="view_circle_loading_progress_title">加载中</string>
    <string name="view_circle_loading_failed_title">加载失败，点击重试</string>

    <!--myfragment-->
    <string name="my_fragment_user_default_name">游客</string>
</resources>
