<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_indicator_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300px"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_login_indicator" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50px"
            android:text="@string/login_app_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_account_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_indicator_root"
        android:layout_marginLeft="100px"
        android:layout_marginRight="100px"
        android:layout_marginTop="60px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_account_title"
            android:textColor="#222222"
            android:textSize="50px" />

        <EditText
            android:id="@+id/login_account_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_cypher_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_account_root"
        android:layout_marginLeft="100px"
        android:layout_marginRight="100px"
        android:layout_marginTop="40px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_cypher_title"
            android:textColor="#222222"
            android:textSize="50px" />

        <EditText
            android:id="@+id/login_cypher_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_problem_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_cypher_root"
        android:layout_marginLeft="100px"
        android:layout_marginRight="100px">

        <CheckBox
            android:id="@+id/login_memory_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_memory_account" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/login_forget_cypher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_cypher" />

    </LinearLayout>

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_problem_root"
        android:layout_margin="100px"
        android:enabled="false"
        android:text="@string/login_login_title"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200px">

        <View
            android:layout_width="200px"
            android:layout_height="2px"
            android:layout_gravity="center_vertical"
            android:background="@color/color_space_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:text="@string/login_no_account" />

        <View
            android:layout_width="200px"
            android:layout_height="2px"
            android:layout_gravity="center_vertical"
            android:background="@color/color_space_line" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100px"
        android:text="@string/login_register_btn"
        android:padding="20px"
        android:textColor="@android:color/holo_blue_bright" />

</RelativeLayout>