<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_toolbar_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="127px"
            android:layout_marginTop="57px">

            <ImageView
                android:id="@+id/userinfo_title_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:background="@android:color/transparent"
                android:padding="30px"
                android:src="@drawable/ic_titlebar_app_back" />

            <TextView
                android:id="@+id/userinfo_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/user_info_toolbar_title"
                android:textColor="@android:color/white"
                android:textSize="56px" />

        </RelativeLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_info_photo"
            android:textColor="#222222" />

        <ImageView
            android:id="@+id/user_info_photo_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_right_arrow" />

        <ImageView
            android:id="@+id/user_info_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="20px"
            android:layout_toLeftOf="@id/user_info_photo_right_arrow"
            android:src="@drawable/my_user_photo_default" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:background="@color/color_space_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40px"
            android:layout_marginTop="40px"
            android:text="@string/user_info_nick_name"
            android:textColor="#222222" />

        <ImageView
            android:id="@+id/user_info_nick_name_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_right_arrow" />

        <TextView
            android:id="@+id/user_info_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="40px"
            android:layout_toLeftOf="@id/user_info_nick_name_right_arrow"
            android:text="某某某" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:background="@color/color_space_line" />

</LinearLayout>